--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,21 @@ django-mptt==0.8.7
 gevent==1.2.2
 greenlet==0.4.12
 gunicorn==19.7.1
+html5lib==1.0.1
 idna==2.5
 kombu==4.1.0
 librabbitmq==1.6.1
+lxml==4.1.1
+mechanize==0.3.5
 olefile==0.44
 Pillow==4.2.1
 psycopg2==2.7.1
 PyJWT==1.5.2
 pytz==2017.2
 requests==2.18.1
+six==1.11.0
+Unidecode==1.0.22
 urllib3==1.21.1
 vine==1.1.4
 w3lib==1.18.0
-mechanize==0.3.5
-lxml
+webencodings==0.5.1
